--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,8 @@
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100vh;
-  overflow: hidden;
+  min-height: 100vh;
+  overflow-y: auto;
 }
 
 .header-banner {
@@ -1062,12 +1062,13 @@
 
 .recording-page {
   padding: 2rem 4rem;
-  height: calc(100vh - 80px);
+  min-height: calc(100vh - 80px);
   display: flex;
   flex-direction: column;
   width: 100vw;
   box-sizing: border-box;
   align-items: center;
+  overflow-y: auto;
 }
 
 .recording-header {
